--- a/sb_rest/build.gradle
+++ b/sb_rest/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
+    }
+}
+
+apply plugin: 'idea'
+
 apply plugin: 'scala'
 apply plugin: 'spring-boot'
 
@@ -9,7 +20,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.scala-lang:scala-library:2.11.5"
+    compile "org.scala-lang:scala-library:2.11.8"
     compile 'com.fasterxml.jackson.module:jackson-module-scala_2.11:2.5.1'
 
     compile "org.springframework.boot:spring-boot-starter-web"
